Fix scrollbar height issue in pod terminal

--- a/frontend/public/components/_terminal.scss
+++ b/frontend/public/components/_terminal.scss
@@ -1,4 +1,4 @@
-@import "~xterm/css/xterm.css";
+@import '~xterm/css/xterm.css';
 
 $console-z-index: $zindex-navbar-fixed + 20;
 $console-collapse-link-z-index: $console-z-index + 20;
@@ -19,15 +19,18 @@ $console-collapse-link-z-index: $console-z-index + 20;
   padding: 0;
   background-color: $color-pf-black;
   position: relative;
+  > .terminal {
+    height: 100%;
+  }
 }
 
 .console-collapse-link.pf-c-button {
-  background:rgba(0, 0, 0, 0.75) !important;
+  background: rgba(0, 0, 0, 0.75) !important;
   color: $color-pf-blue-300;
   position: fixed;
   right: 18px;
   top: 4px;
-  z-index: $console-collapse-link-z-index;  // in fullscreen mode, to get above console's z-index
+  z-index: $console-collapse-link-z-index; // in fullscreen mode, to get above console's z-index
 }
 
 .default-overflow {
